@@ -23,9 +23,7 @@
 
 #include "ace/Global_Macros.h"
 #include "ace/Cleanup_Strategies_T.h"
-
-// For linkers that cant grok long names.
-#define ACE_Pair_Caching_Utility APUTIL
+#include "ace/Copy_Disabled.h"
 
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
@@ -44,7 +42,7 @@ ACE_BEGIN_VERSIONED_NAMESPACE_DECL
  * entries to be cleaned up will be delegated.
  */
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
-class ACE_Pair_Caching_Utility
+class ACE_Pair_Caching_Utility : private ACE_Copy_Disabled
 {
 public:
 
@@ -52,7 +50,7 @@ public:
 
   /// Constructor.
   ACE_Pair_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy = 0,
-                            int delete_cleanup_strategy = 0);
+                            bool delete_cleanup_strategy = false);
 
   /// Destructor.
   ~ACE_Pair_Caching_Utility (void);
@@ -61,8 +59,7 @@ public:
    * Purge entries from the @a container. The Cleanup_Strategy will do the
    * actual job of cleanup once the entries to be cleaned up are decided.
    */
-  int clear_cache (CONTAINER &container,
-                   double purge_percent);
+  int clear_cache (CONTAINER &container, double purge_percent);
 
 protected:
 
@@ -76,14 +73,8 @@ protected:
   CLEANUP_STRATEGY *cleanup_strategy_;
 
   /// Whether the cleanup_strategy should be destroyed or not.
-  int delete_cleanup_strategy_;
-
-  ACE_UNIMPLEMENTED_FUNC (void operator= (const ACE_Pair_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
-  ACE_UNIMPLEMENTED_FUNC (ACE_Pair_Caching_Utility (const ACE_Pair_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
+  bool delete_cleanup_strategy_;
 };
-
-////////////////////////////////////////////////////////////////////////////////
-#define ACE_Recyclable_Handler_Caching_Utility ARHUTIL
 
 /**
  * @class ACE_Recyclable_Handler_Caching_Utility
@@ -100,7 +91,7 @@ protected:
  * be cleaned up will be delegated.
  */
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
-class ACE_Recyclable_Handler_Caching_Utility
+class ACE_Recyclable_Handler_Caching_Utility : private ACE_Copy_Disabled
 {
 
 public:
@@ -110,7 +101,7 @@ public:
 
   /// Constructor.
   ACE_Recyclable_Handler_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy = 0,
-                                          int delete_cleanup_strategy = 0);
+                                          bool delete_cleanup_strategy = false);
 
   /// Destructor.
   ~ACE_Recyclable_Handler_Caching_Utility (void);
@@ -134,15 +125,8 @@ protected:
   CLEANUP_STRATEGY_BASE *cleanup_strategy_;
 
   /// Whether the cleanup_strategy should be destroyed or not.
-  int delete_cleanup_strategy_;
-
-private:
-  ACE_UNIMPLEMENTED_FUNC (void operator= (const ACE_Recyclable_Handler_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
-  ACE_UNIMPLEMENTED_FUNC (ACE_Recyclable_Handler_Caching_Utility (const ACE_Recyclable_Handler_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
+  bool delete_cleanup_strategy_;
 };
-
-///////////////////////////////////////////////////////////////////////////
-#define ACE_Refcounted_Recyclable_Handler_Caching_Utility ARRHUTIL
 
 /**
  * @class ACE_Refcounted_Recyclable_Handler_Caching_Utility
@@ -160,17 +144,15 @@ private:
  * delegated.
  */
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
-class ACE_Refcounted_Recyclable_Handler_Caching_Utility
+class ACE_Refcounted_Recyclable_Handler_Caching_Utility : private ACE_Copy_Disabled
 {
-
 public:
-
   typedef ACE_Refcounted_Recyclable_Handler_Cleanup_Strategy<KEY, VALUE, CONTAINER> CLEANUP_STRATEGY;
   typedef ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> CLEANUP_STRATEGY_BASE;
 
   /// Constructor.
   ACE_Refcounted_Recyclable_Handler_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy = 0,
-                                                     int delete_cleanup_strategy = 0);
+                                                     bool delete_cleanup_strategy = false);
 
   /// Destructor.
   ~ACE_Refcounted_Recyclable_Handler_Caching_Utility (void);
@@ -194,7 +176,7 @@ protected:
   CLEANUP_STRATEGY_BASE *cleanup_strategy_;
 
   /// Whether the cleanup_strategy should be destroyed or not.
-  int delete_cleanup_strategy_;
+  bool delete_cleanup_strategy_;
 
   /**
    * This figure denotes the number of entries are there in the
@@ -202,13 +184,7 @@ protected:
    * not have been unbound from the container.
    */
   size_t marked_as_closed_entries_;
-
-private:
-  ACE_UNIMPLEMENTED_FUNC (void operator= (const ACE_Refcounted_Recyclable_Handler_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
-  ACE_UNIMPLEMENTED_FUNC (ACE_Refcounted_Recyclable_Handler_Caching_Utility (const ACE_Refcounted_Recyclable_Handler_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
 };
-
-////////////////////////////////////////////////////////////////////////////////////////
 
 /**
  * @class ACE_Handler_Caching_Utility
@@ -225,7 +201,7 @@ private:
  * class to which the entries to be cleaned up will be delegated.
  */
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
-class ACE_Handler_Caching_Utility
+class ACE_Handler_Caching_Utility : private ACE_Copy_Disabled
 {
 public:
 
@@ -234,7 +210,7 @@ public:
 
   /// Constructor.
   ACE_Handler_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy = 0,
-                               int delete_cleanup_strategy = 0);
+                               bool delete_cleanup_strategy = false);
 
   /// Destructor.
   ~ACE_Handler_Caching_Utility (void);
@@ -264,15 +240,9 @@ protected:
   CLEANUP_STRATEGY_BASE *cleanup_strategy_;
 
   /// Whether the cleanup_strategy should be destroyed or not.
-  int delete_cleanup_strategy_;
-
-private:
-  ACE_UNIMPLEMENTED_FUNC (void operator= (const ACE_Handler_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
-  ACE_UNIMPLEMENTED_FUNC (ACE_Handler_Caching_Utility (const ACE_Handler_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
+  bool delete_cleanup_strategy_;
 };
 
-///////////////////////////////////////////////////////////////////////////
-#define ACE_Null_Caching_Utility ANUTIL
 /**
  * @class ACE_Null_Caching_Utility
  *
@@ -286,7 +256,7 @@ private:
  * be cleaned up will be delegated.
  */
 template <class KEY, class VALUE, class CONTAINER, class ITERATOR, class ATTRIBUTES>
-class ACE_Null_Caching_Utility
+class ACE_Null_Caching_Utility : private ACE_Copy_Disabled
 {
 public:
 
@@ -295,7 +265,7 @@ public:
 
   /// Constructor.
   ACE_Null_Caching_Utility (ACE_Cleanup_Strategy<KEY, VALUE, CONTAINER> *cleanup_strategy = 0,
-                            int delete_cleanup_strategy = 0);
+                            bool delete_cleanup_strategy = false);
 
   /// Destructor.
   ~ACE_Null_Caching_Utility (void);
@@ -325,11 +295,7 @@ protected:
   CLEANUP_STRATEGY_BASE *cleanup_strategy_;
 
   /// Whether the cleanup_strategy should be destroyed or not.
-  int delete_cleanup_strategy_;
-
-private:
-  ACE_UNIMPLEMENTED_FUNC (void operator= (const ACE_Null_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
-  ACE_UNIMPLEMENTED_FUNC (ACE_Null_Caching_Utility (const ACE_Null_Caching_Utility<KEY,VALUE,CONTAINER,ITERATOR,ATTRIBUTES> &))
+  bool delete_cleanup_strategy_;
 };
 
 ACE_END_VERSIONED_NAMESPACE_DECL
