@@ -277,7 +277,7 @@ public:
    * Associate @a name with @a pointer.  If @a duplicates == 0 then do
    * not allow duplicate @a name/pointer associations, else if
    * @a duplicates != 0 then allow duplicate @a name/pointer
-   * assocations.  Returns 0 if successfully binds (1) a previously
+   * associations.  Returns 0 if successfully binds (1) a previously
    * unbound @a name or (2) @a duplicates != 0, returns 1 if trying to
    * bind a previously bound @a name and @a duplicates == 0, else
    * returns -1 if a resource failure occurs.
@@ -515,7 +515,7 @@ public:
    * Associate @a name with @a pointer.  If @a duplicates == 0 then do
    * not allow duplicate name/pointer associations, else if
    * @a duplicates != 0 then allow duplicate name/pointer
-   * assocations.  Returns 0 if successfully binds (1) a previously
+   * associations.  Returns 0 if successfully binds (1) a previously
    * unbound @a name or (2) @a duplicates != 0, returns 1 if trying to
    * bind a previously bound @a name and @a duplicates == 0, else
    * returns -1 if a resource failure occurs.
